--- a/style.css
+++ b/style.css
@@ -3,3 +3,4 @@ body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
 hr {border: solid 5px; width: 50px;}
+.responsive_img{width: 100%;height: auto;}
