--- a/style.css
+++ b/style.css
@@ -1,17 +1,33 @@
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
+hr {border: solid 5px; width: 50px;}
+
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
-hr {border: solid 5px; width: 50px;}
+
 .responsive_img{width: 100%;height: auto;}
 
-.grid-container {
+.grid-container-project {
     display: grid;
     grid-template-columns: auto auto auto auto;
+    grid-gap: 15px;    
 }
+
+.grid-container-skills {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 15px;    
+}
+
 @media only screen and (max-width: 770px) {
-    .grid-container {
+    .grid-container-project {
         display: grid;
         grid-template-columns: auto;
+        grid-gap: 10px;
+    }
+    .grid-container-skills {
+        display: grid;
+        grid-template-columns: auto;
+        grid-gap: 10px;
     }
 }
