--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ hr {border: solid 5px; width: 50px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
 
+.myMap {
+    width: 100%;
+    height: 200px;
+}
+
 .responsive_img{width: 100%;height: auto;}
 
 .grid-container-project {
