--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ hr {border: solid 5px; width: 50px;}
     grid-gap: 15px;    
 }
 
+.grid-container-design {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    grid-gap: 15px;    
+}
+
 @media only screen and (max-width: 770px) {
     .grid-container-project {
         display: grid;
