--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
-body {font-size:16px;}
+
+body {
+    font-size:16px;
+}
+
+h1 {
+    color: #092834;
+}
+
 hr {border: solid 5px; width: 50px;}
 
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
