--- a/style.css
+++ b/style.css
@@ -18,24 +18,22 @@ hr {border: solid 5px; width: 50px;}
     height: 200px;
 }
 
-.responsive_img{width: 100%;height: auto;}
-
 .grid-container-project {
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-gap: 15px;    
+    grid-template-columns: auto auto auto;
+    grid-gap: 15px;
 }
 
 .grid-container-skills {
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-gap: 15px;    
+    grid-gap: 15px;
 }
 
 .grid-container-design {
     display: grid;
     grid-template-columns: auto auto auto auto auto;
-    grid-gap: 15px;    
+    grid-gap: 15px;
 }
 
 @media only screen and (max-width: 770px) {
