--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@ body {
     font-size:16px;
 }
 
-h1 {
-    color: #092834;
-}
-
 hr {border: solid 5px; width: 50px;}
 
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
@@ -36,6 +32,13 @@ hr {border: solid 5px; width: 50px;}
     grid-gap: 15px;
 }
 
+.grip-container-certificates {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 15px;
+}
+
+
 @media only screen and (max-width: 770px) {
     .grid-container-project {
         display: grid;
@@ -43,6 +46,11 @@ hr {border: solid 5px; width: 50px;}
         grid-gap: 10px;
     }
     .grid-container-skills {
+        display: grid;
+        grid-template-columns: auto;
+        grid-gap: 10px;
+    }
+    .grip-container-certificates {
         display: grid;
         grid-template-columns: auto;
         grid-gap: 10px;
