--- a/assets/template/sidenav.css
+++ b/assets/template/sidenav.css
@@ -1,24 +1,35 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+
 /* The sidebar menu */
 .sidenav {
   height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
+  width: 300px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
+  z-index: 2; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
   background-color: #111; /* Black */
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
+  padding: 50px 20px 0px 20px ;
 }
-
 
 /* The navigation menu links */
 .sidenav a {
   padding: 6px 8px 6px 16px;
+  border: oldlace 1px solid;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
   display: block;
+  margin-bottom: 15px;
 }
 
 /* When you mouse over the navigation links, change their color */
@@ -27,65 +38,47 @@
 }
 
 .container {
-  margin-left: 160px; /* Same as the width of the sidebar */
+  margin-left: 300px; /* Same as the width of the sidebar */
   padding: 0px 10px;
 }
 
-a.menu-icon {
+.nav-top {
   display: none;
-}
-
-title {
-  display: block;
-}
-
-
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  background: #111;
 }
 
 
 @media screen and (max-width: 750px){
   .sidenav {
-    height: 180px; /* Full-height: remove this if you want "auto" height */
-    width: 100%; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    background-color: #111; /* Black */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 5px;
-  }
-  
-  /* The navigation menu links */
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
+    display: none;
   }
 
   .container {
     margin-left: 0;
-    margin-top: 180px; /* Same as the width of the sidebar */
-    padding: 10px 5px;
+    margin-top: 60px; /* Same as the width of the sidebar */
+    padding: 5px 5px;
   }
 
-  button.menu-icon  {
+  .nav-top {
     display: block;
-    float: right;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 60px;
+  }
+  .nav-top a {
+    position: absolute;
+    right: 10px;
+    top: 11px;
+    padding: 3px 8px 2px 8px;
+    border: oldlace 1px solid;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;    
   }
 
-  .sidenav > .menu {
-    display: none;
-  }
-
-  .title {
+  .menu-active {
     display: block;
-    float: left;
+    opacity: 92%;
   }
-
 }
